--- a/Cinelandia-master1/Servidor/rest_persistence/src/main/webapp/WEB-INF/web.xml
+++ b/Cinelandia-master1/Servidor/rest_persistence/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,12 @@
 		<servlet-name>Api</servlet-name>
 		<jsp-file>/api.jsp</jsp-file>
 	</servlet>
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<display-name>Login</display-name>
+		<description></description>
+		<servlet-class>Login</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>jerseyServlet</servlet-name>
 		<url-pattern>/api/*</url-pattern>
@@ -53,5 +59,9 @@
 	<servlet-mapping>
 		<servlet-name>Api</servlet-name>
 		<url-pattern>/api</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 </web-app>
